chore(main): release 2.18.0 (#2347)
:robot: I have created a release *beep* *boop*
---


## [2.18.0](https://togithub.com/googleapis/java-bigquery/compare/v2.17.1...v2.18.0) (2022-10-27)


### Features

* Add executeSelectAsync and Refactor ([#2294](https://togithub.com/googleapis/java-bigquery/issues/2294)) ([80fa478](https://togithub.com/googleapis/java-bigquery/commit/80fa47834f3ef536f553702dee3ddc80e18981bb))


### Bug Fixes

* Add --add-opens arg to native-image command ([#2369](https://togithub.com/googleapis/java-bigquery/issues/2369)) ([8e8b6d7](https://togithub.com/googleapis/java-bigquery/commit/8e8b6d70e228a63b5dde00b828765110b0222d20))
* Properly handle external table schema on table update ([#2236](https://togithub.com/googleapis/java-bigquery/issues/2236)) ([460ef31](https://togithub.com/googleapis/java-bigquery/commit/460ef318297fe5562a983f64c407b7c0fa5a9a8b))


### Dependencies

* Update arrow.version to v10 (major) ([#2371](https://togithub.com/googleapis/java-bigquery/issues/2371)) ([b7873db](https://togithub.com/googleapis/java-bigquery/commit/b7873db46e174c755657ddcecbb02c0e495c9a1f))
* Update cloud client dependencies ([#2362](https://togithub.com/googleapis/java-bigquery/issues/2362)) ([0936699](https://togithub.com/googleapis/java-bigquery/commit/09366996e281354cc423cbc3ac97a11b0d48eda6))
* Update dependency com.google.api.grpc:proto-google-cloud-bigqueryconnection-v1 to v2.6.0 ([#2355](https://togithub.com/googleapis/java-bigquery/issues/2355)) ([7bc59a7](https://togithub.com/googleapis/java-bigquery/commit/7bc59a77a6f3821ac19088a8ee864f5d24bdee2e))
* Update dependency com.google.api.grpc:proto-google-cloud-bigqueryconnection-v1 to v2.7.0 ([#2366](https://togithub.com/googleapis/java-bigquery/issues/2366)) ([02102d3](https://togithub.com/googleapis/java-bigquery/commit/02102d3fb873e68827a8630a4eb34d4bcabd5f9d))
* Update dependency com.google.apis:google-api-services-bigquery to v2-rev20221015-2.0.0 ([#2370](https://togithub.com/googleapis/jav